Improve logic for QFlags.

BUG:249567

svn path=/trunk/KDE/kdebindings/generator/; revision=1173496